.gsd.migrating/exec/c57e42b0-278a-479b-9aa5-02c874f8c405.stderr
    Updating crates.io index
     Locking 3 packages to latest Rust 1.85.0 compatible versions
      Adding vcdiff-common v1.0.0
      Adding vcdiff-decoder v1.0.0
      Adding vcdiff-reader v1.0.0
 Downloading crates ...
  Downloaded vcdiff-reader v1.0.0
  Downloaded vcdiff-common v1.0.0
   Compiling vcdiff-common v1.0.0
   Compiling reqwest v0.13.3
   Compiling vcdiff-reader v1.0.0
   Compiling vcdiff-decoder v1.0.0
   Compiling cmt-rs v0.1.0 (/mnt/j/cmt-rs)
error[E0425]: cannot find type `PlatformResult` in this scope
    --> src/services/downgrader.rs:2681:61
     |
2681 | ...-> PlatformResult<()> {
     |       ^^^^^^^^^^^^^^ not found in this scope
     |
help: consider importing this type alias
     |
1904 +     use crate::platform::PlatformResult;
     |

error[E0425]: cannot find type `PlatformResult` in this scope
    --> src/services/downgrader.rs:2693:56
     |
2693 | ...-> PlatformResult<()> {
     |       ^^^^^^^^^^^^^^ not found in this scope
     |
help: consider importing this type alias
     |
1904 +     use crate::platform::PlatformResult;
     |

error[E0425]: cannot find type `PlatformResult` in this scope
    --> src/services/downgrader.rs:2717:58
     |
2717 | ...-> PlatformResult<()> {
     |       ^^^^^^^^^^^^^^ not found in this scope
     |
help: consider importing this type alias
     |
1904 +     use crate::platform::PlatformResult;
     |

error[E0425]: cannot find type `PlatformResult` in this scope
    --> src/services/downgrader.rs:2739:47
     |
2739 | ...-> PlatformResult<()> {
     |       ^^^^^^^^^^^^^^ not found in this scope
     |
help: consider importing this type alias
     |
1904 +     use crate::platform::PlatformResult;
     |

For more information about this error, try `rustc --explain E0425`.
error: could not compile `cmt-rs` (bin "cmt-rs" test) due to 4 previous errors
